Bug 1637285 - Draw high contrast progress bar top border only. r=mhowell
This allows the bar to be any width.

Differential Revision: https://phabricator.services.mozilla.com/D74983

UltraBlame original commit: cae2bfa2adfe6d8091e00b38eefd94996312cf77

--- a/browser/branding/aurora/stubinstaller/installing_page.css
+++ b/browser/branding/aurora/stubinstaller/installing_page.css
@@ -40,7 +40,8 @@ body.high-contrast #progress_background {
 
 
 body.high-contrast #progress_bar {
-  border: 12px solid;
+  
+  border-top: 24px solid;
   box-sizing: border-box;
 }
 
